--- a/IdentityProject.Web/Views/Account/Register.cshtml
+++ b/IdentityProject.Web/Views/Account/Register.cshtml
@@ -9,6 +9,7 @@
         <h3 class="card-title text-center">Registro de usuario</h3>
         <form asp-controller="Account" asp-action="Register" method="post">
             <div class="text-danger" asp-validation-summary="All"></div>
+            @Html.AntiForgeryToken()
 
             <div class="row mt-4">
                 <div class="col-sm-6">
