--- a/IdentityProject.Web/Views/Shared/_LoginRegister.cshtml
+++ b/IdentityProject.Web/Views/Shared/_LoginRegister.cshtml
@@ -1,8 +1,25 @@
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
+
 <ul class="navbar-nav ml-auto">
-    <li class="nav-item">
-        <a class="nav-link text-white" asp-area="" asp-controller="Account" asp-action="Register">Registro</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link text-white" asp-area="" asp-controller="Account" asp-action="Login">Acceder</a>
-    </li>
+    @if (SignInManager.IsSignedIn(User))
+    {
+        <li class="nav-item">
+            <a class="nav-link text-white" href="javascript:void(0)">Hola, @UserManager.GetUserName(User)</a>
+        </li>
+        <li class="nav-item">
+            <form id="logoutForm" method="post" class="form-inline" asp-area="" asp-controller="Account"
+                asp-action="Logout"><button type="submit" class="btn nav-link">Salir</button></form>
+        </li>
+    }
+    else
+    {
+        <li class="nav-item">
+            <a class="nav-link text-white" asp-area="" asp-controller="Account" asp-action="Register">Registro</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-white" asp-area="" asp-controller="Account" asp-action="Login">Acceder</a>
+        </li>
+    }
 </ul>
