add options configuration for identity in program.cs, set lockout in true, i created FotgotPasswordViewModel, AccountLocked.cshtml, ConfirmPassword.cshtml, ForgotPassword.cshtml

--- a/IdentityProject.Web/Views/Account/Login.cshtml
+++ b/IdentityProject.Web/Views/Account/Login.cshtml
@@ -48,8 +48,8 @@
                 <div class="col-sm-6">
                     <button type="submit" class="btn btn-primary w-100 btn-lg">Acceder <i
                             class="bi-arrow-right-circle-fill"></i></button>
-                    <p class="mt-3"><a asp-action="Register">Registrarse como un nuevo usuario?</a></p>
-                    <p><a asp-action="ForgotPassword">Olvidó la contraseña?</a></p>
+                    <p class="mt-3"><a asp-action="Register">¿Registrarse como un nuevo usuario?</a></p>
+                    <p><a asp-action="ForgotPassword">¿Olvidó la contraseña?</a></p>
                 </div>
             </div>
 
