Password reset via email functionality has been implemented.

--- a/IdentityProject.Web/Views/Account/AccountLocked.cshtml
+++ b/IdentityProject.Web/Views/Account/AccountLocked.cshtml
@@ -1,3 +1,7 @@
+@{
+    ViewData["Title"] = "Cuenta bloqueada";
+}
+
 <header>
   <div class="container">
     <div class="row justify-content-center">
