--- a/IdentityProject.Web/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/IdentityProject.Web/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,3 +1,7 @@
+@{
+  ViewData["Title"] = "Confirmación de envio de contraseña";
+}
+
 <header>
   <div class="container">
     <div class="row justify-content-center">
@@ -6,6 +10,9 @@
         <p class="text-center">
           Por favor verifique su correo electrónico para recuperar su contraseña.
           Le hemos enviado un correo electrónico con un enlace para restablecer su contraseña.
+        </p>
+        <p class="text-center">
+          Gracias por usar nuestro servicio.
         </p>
       </div>
     </div>
