--- a/IdentityProject.Web/Views/Account/ActivateTwoFactorAuthentication.cshtml
+++ b/IdentityProject.Web/Views/Account/ActivateTwoFactorAuthentication.cshtml
@@ -15,15 +15,18 @@
 
                 <div class="card mb-3">
                     <div class="card-body">
-                        <p class="card-text">
-                            Ingrese el siguiente código en su aplicación de autenticación para completar la activación
-                            de la autenticación de dos factores:
+                        <p class="text-center">
+                            Ingrese el siguiente código en su aplicación de autenticación:
                         </p>
                         <div class="text-center mb-3">
                             <h5><code>@Model.Token</code></h5>
                         </div>
+
+                        <p class="text-center mb-3">O escanea el código QR a continuación: </p>
+                        <div id="QrCode" class="d-flex justify-content-center align-items-center mb-5"></div>
+
                         <div class="form-group">
-                            <label asp-for="Code" class="form-label">Código de autenticador:</label>
+                            <label asp-for="Code" class="form-label">Código del autenticador:</label>
                             <input asp-for="Code" class="form-control"
                                 placeholder="Escribe aquí el código de tu autenticador">
                             <span asp-validation-for="Code" class="text-danger"></span>
@@ -43,4 +46,9 @@
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
+    <script src="~/js/qrcode.js"></script>
+    <script type="text/javascript">
+        const QR_CODE_DIV = document.getElementById("QrCode");
+        new QRCode(QR_CODE_DIV, "@Model.QrCodeUri");
+    </script>
 }
