--- a/IdentityProject.Web/Views/Shared/_LoginRegister.cshtml
+++ b/IdentityProject.Web/Views/Shared/_LoginRegister.cshtml
@@ -1,4 +1,5 @@
 @using Microsoft.AspNetCore.Identity
+@using IdentityProject.Web.Models.Enum
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
 
@@ -8,6 +9,14 @@
         <li class="nav-item">
             <a class="nav-link text-white" href="javascript:void(0)">Hola, @UserManager.GetUserName(User)</a>
         </li>
+
+        @if (User.IsInRole(nameof(RoleType.Admin)))
+        {
+            <li class="nav-item">
+                <a class="nav-link text-white" asp-area="" asp-controller="Account" asp-action="RegisterAdmin">Registrar</a>
+            </li>
+        }
+
         <li class="nav-item">
             <form id="logoutForm" method="post" class="form-inline" asp-area="" asp-controller="Account"
                 asp-action="Logout"><button type="submit" class="btn nav-link">Salir</button></form>
