--- a/IdentityProject.Web/Views/Shared/_LoginRegister.cshtml
+++ b/IdentityProject.Web/Views/Shared/_LoginRegister.cshtml
@@ -1,5 +1,5 @@
 @using Microsoft.AspNetCore.Identity
-@using IdentityProject.Web.Models.Enum
+@using IdentityProject.Common.Enums;
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
 
