--- a/IdentityProject.Web/Views/Account/Login.cshtml
+++ b/IdentityProject.Web/Views/Account/Login.cshtml
@@ -6,12 +6,13 @@
 <div class="card">
     <div class="card-body">
         <h3 class="card-title text-center">Acceso de usuario</h3>
-        <form asp-controller="Account" asp-action="Login" asp-route-returnUrl="@ViewData["ReturnUrl"]" method="post">
-            <div class="text-danger" asp-validation-summary="All"></div>
-            @Html.AntiForgeryToken()
 
-            <div class="row mt-4">
-                <div class="col-sm-6">
+        <div class="row mt-4">
+            <div class="col-sm-6">
+                <form asp-controller="Account" asp-action="Login" asp-route-returnUrl="@ViewData["ReturnUrl"]"
+                    method="post">
+                    <div class="text-danger" asp-validation-summary="All"></div>
+                    @Html.AntiForgeryToken()
 
                     <div class="mb-3">
                         <label class="col-md-4" asp-for="UserName"></label>
@@ -34,26 +35,23 @@
                         </div>
                     </div>
 
-                </div>
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <button type="submit" class="btn btn-primary w-100 btn-lg">Acceder <i
+                                    class="bi-arrow-right-circle-fill"></i></button>
+                            <p class="mt-3"><a asp-action="Register">¿Registrarse como un nuevo usuario?</a></p>
+                            <p><a asp-action="ForgotPassword">¿Olvidó la contraseña?</a></p>
+                        </div>
+                    </div>
 
-                <div class="col-sm-4 offset-2">
-
-                    <h3>Aquí acceso aplicaciones externas</h3>
-
-                </div>
-
+                </form>
             </div>
 
-            <div class="row">
-                <div class="col-sm-6">
-                    <button type="submit" class="btn btn-primary w-100 btn-lg">Acceder <i
-                            class="bi-arrow-right-circle-fill"></i></button>
-                    <p class="mt-3"><a asp-action="Register">¿Registrarse como un nuevo usuario?</a></p>
-                    <p><a asp-action="ForgotPassword">¿Olvidó la contraseña?</a></p>
-                </div>
+            <div class="col-sm-6 mt-2 text-center">
+                <h3>Aquí acceso aplicaciones externas</h3>
             </div>
 
-        </form>
+        </div>
     </div>
 </div>
 
