--- a/IdentityProject.Web/Views/Home/Index.cshtml
+++ b/IdentityProject.Web/Views/Home/Index.cshtml
@@ -8,36 +8,7 @@
             <div class="card mb-3">
                 <div class="card-body">
                     <h2 class="card-title text-center">Bienvenido</h2>
-
-                    @if (User.Identity!.IsAuthenticated)
-                    {
-                        var isTwoFactorAuthenticationActive = ViewData["IsTwoFactorAuthenticationActive"];
-                        if (isTwoFactorAuthenticationActive != null && isTwoFactorAuthenticationActive.ToString()!.ToLower()
-                        == "true")
-                        {
-                            <div class="d-flex justify-content-center align-items-center">
-                                <a asp-controller="Account" asp-action="DisableTwoFactorAuthentication" class="btn btn-danger">
-                                Desactivar la autenticación de dos factores
-                            </a>
-                            </div>
-                        }
-                        else
-                        {
-                            <div class="card mb-3">
-                                <div class="card-body">
-                                    <p class="text-center">
-                                        ¿Desea configurar la autenticación de dos factores?
-                                    </p>
-                                    <div class="text-center">
-                                        <a asp-controller="Account" asp-action="ActivateTwoFactorAuthentication"
-                                            class="btn btn-primary">
-                                            Configurar <i class="bi bi-arrow-right-circle-fill"></i>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        }
-                    }
+                    <p class="text-center m-4">Esta aplicación es para aprender</p>
                 </div>
             </div>
         </div>
