--- a/IdentityProject.Web/Views/Shared/_LoginRegister.cshtml
+++ b/IdentityProject.Web/Views/Shared/_LoginRegister.cshtml
@@ -6,9 +6,32 @@
 <ul class="navbar-nav ml-auto">
     @if (SignInManager.IsSignedIn(User))
     {
-        <li class="nav-item">
-            <a class="nav-link text-white" href="javascript:void(0)">Hola, @UserManager.GetUserName(User)</a>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Mi Cuenta
+            </a>
+            <ul class="dropdown-menu">
+                <li class="nav-item">
+                    <a class="dropdown-item" href="javascript:void(0)">@UserManager.GetUserName(User)</a>
+                </li>
+                <li class="nav-item">
+                    <a class="dropdown-item" asp-area="" asp-controller="User" asp-action="EditProfile"
+                        asp-route-id="@UserManager.GetUserId(User)">Editar Perfil</a>
+                </li>
+                <li>
+                    <hr class="dropdown-divider">
+                </li>
+                <li class="nav-item">
+                    <a class="dropdown-item" asp-area="" asp-controller="User" asp-action="ChangePassword">Cambiar
+                        Contraseña</a>
+                </li>
+                <li class="nav-item">
+                    <a class="dropdown-item" asp-area="" asp-controller="User" asp-action="Settings">Configuración</a>
+                </li>
+            </ul>
         </li>
+
+
 
         @if (User.IsInRole(nameof(RoleType.Admin)))
         {
