--- a/IdentityProject.Web/Views/Shared/_Layout.cshtml
+++ b/IdentityProject.Web/Views/Shared/_Layout.cshtml
@@ -5,15 +5,27 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - IdentityProject</title>
+    <!-------------------------------------css-------------------------------------------------------------------->
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <!--icons bootstrap 5-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
     <!--styles jquery for datepicker-->
     <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
-
+    <!--styles jquery for datatables-->
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.css" />
+    <!--css for the site -->
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/IdentityProject.Web.styles.css" asp-append-version="true" />
+    <!----------------------------------------js------------------------------------------------------------------->
+    <script defer src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script defer src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <!--js for jquery ui datepicker-->
+    <script defer src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+    <!--js for jquery datatables-->
+    <script defer src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.js"></script>
+    <!--js for the site -->
+    <script defer src="~/js/site.js" asp-append-version="true"></script>
+
 </head>
 
 <body>
@@ -36,8 +48,8 @@
                                 asp-action="Privacy">Privacidad</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Home"
-                                asp-action="ProtectedView">PáginaProtegida</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Roles"
+                                asp-action="Index">Administrar Roles</a>
                         </li>
                     </ul>
 
@@ -59,22 +71,6 @@
             &copy; 2024 - IdentityProject - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacidad</a>
         </div>
     </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-
-    <!--js for jquery ui datepicker-->
-    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
-    <script>
-        $(function () {
-            $("#datepicker").datepicker({
-                changeMonth: true,
-                changeYear: true,
-                yearRange: "1930:2020",
-                dateFormat: "dd/mm/yy"
-            });
-        });
-    </script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
