--- a/IdentityProject.Web/Views/Roles/Index.cshtml
+++ b/IdentityProject.Web/Views/Roles/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<Microsoft.AspNetCore.Identity.IdentityRole>
+@model IEnumerable<RoleViewModel>
 
 @{
     ViewData["Title"] = "Administracion de roles";
