--- a/IdentityProject.Web/Views/Roles/Create.cshtml
+++ b/IdentityProject.Web/Views/Roles/Create.cshtml
@@ -1,4 +1,4 @@
-@model Microsoft.AspNetCore.Identity.IdentityRole
+@model RoleViewModel
 @{
     ViewData["Title"] = "Crear Nuevo Rol";
 }
@@ -13,7 +13,7 @@
                 <div class="col-12 col-md-8 offset-md-2">
 
                     <div class="mb-3">
-                        <label class="col-md-4" asp-for="Name">Nombre del rol</label>
+                        <label class="col-md-4" asp-for="Name"></label>
                         <input asp-for="Name" class="form-control" placeholder="Ingresa el nombre del nuevo rol">
                         <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
