--- a/IdentityProject.Web/Views/Account/ActivateTwoFactorAuthentication.cshtml
+++ b/IdentityProject.Web/Views/Account/ActivateTwoFactorAuthentication.cshtml
@@ -48,6 +48,7 @@
     }
     <script src="~/js/qrcode.js"></script>
     <script type="text/javascript">
+        "use strict";
         const QR_CODE_DIV = document.getElementById("QrCode");
         new QRCode(QR_CODE_DIV, "@Model.QrCodeUri");
     </script>
