--- a/IdentityProject.Web/Views/Roles/Index.cshtml
+++ b/IdentityProject.Web/Views/Roles/Index.cshtml
@@ -62,3 +62,19 @@
         </div>
     </div>
 </div>
+
+@section Scripts {
+
+    @if (TempData["Success"] is not null)
+    {
+        <script type="text/javascript">
+            toastr.success("@TempData["Success"]");
+        </script>
+    }
+    @if (TempData["Error"] is not null)
+    {
+        <script type="text/javascript">
+            toastr.error("@TempData["Error"]");
+        </script>
+    }
+}
