--- a/IdentityProject.Web/Views/Shared/_Layout.cshtml
+++ b/IdentityProject.Web/Views/Shared/_Layout.cshtml
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
     <!--styles jquery for datatables-->
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.css" />
+    <!--styles toastr-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.css" />
     <!--css for the site -->
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/IdentityProject.Web.styles.css" asp-append-version="true" />
@@ -69,6 +71,8 @@
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <!--js for jquery datatables-->
     <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.js"></script>
+    <!--js for toastr-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
     <!--js for the site -->
     <script src="~/js/site.js" asp-append-version="true"></script>
 
