--- a/IdentityProject.Web/Views/User/Edit.cshtml
+++ b/IdentityProject.Web/Views/User/Edit.cshtml
@@ -9,9 +9,9 @@
 <div class="row">
     <div class="col-md-8 offset-2">
         <form method="post" asp-controller="User" asp-action="Edit">
-            <div class="text-danger" asp-validation-summary="All"></div>
             @Html.AntiForgeryToken()
             <input type="hidden" asp-for="Id" />
+            <input type="hidden" name="oldRoleId" value="@Model.RoleId" />
 
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
@@ -19,6 +19,10 @@
             <div class="form-group mb-4">
                 <label asp-for="Email"></label>
                 <input asp-for="Email" readonly class="form-control" />
+            </div>
+            <div class="form-group mb-4">
+                <label asp-for="Name"></label>
+                <input asp-for="Name" readonly class="form-control" />
             </div>
             <div class="form-group">
                 <label asp-for="RoleId"></label>
