--- a/IdentityProject.Web/Views/Roles/Index.cshtml
+++ b/IdentityProject.Web/Views/Roles/Index.cshtml
@@ -24,7 +24,7 @@
                 <div class="table-responsive">
                     @if (Model.Count() > 0)
                     {
-                        <table class="table" id="datatables" width="100%" cellspacing="0">
+                        <table class="table table-bordered table-hover nowrap" id="datatables" width="100%" cellspacing="0">
                             <thead>
                                 <tr>
                                     <th>Nombre</th>
