--- a/IdentityProject.Web/Views/User/Index.cshtml
+++ b/IdentityProject.Web/Views/User/Index.cshtml
@@ -16,7 +16,7 @@
                 <div class="table-responsive">
                     @if (Model.Count() > 0)
                     {
-                        <table class="table" id="datatables" width="100%" cellspacing="0">
+                        <table class="table table-bordered table-hover nowrap" id="datatables" width="100%" cellspacing="0">
                             <thead>
                                 <tr>
                                     <th>@Html.DisplayNameFor(u => u.Name)</th>
@@ -37,13 +37,29 @@
                                         <td>@Html.DisplayFor(role => item.PhoneNumber)</td>
                                         <td>@Html.DisplayFor(role => item.RoleName)</td>
                                         <td>
-                                            <div class="btn-group" style="gap: 10px;">
-                                                <a class="btn btn-primary" asp-controller="User" asp-action="Edit"
-                                                    asp-route-id="@item.Id">Editar</a>
-                                                <a class="btn btn-warning" asp-controller="User" asp-action="Lock"
-                                                    asp-route-id="@item.Id">Bloquear</a>
-                                                <a class="btn btn-danger" asp-controller="User" asp-action="Delete"
-                                                    asp-route-id="@item.Id">Eliminar</a>
+                                            <div class="btn-group text-center" style="gap: 10px;">
+                                                <form asp-controller="User" asp-action="Delete" asp-route-id="@item.Id">
+                                                    @Html.AntiForgeryToken()
+
+                                                    <a class="btn btn-primary" asp-controller="User" asp-action="Edit"
+                                                        asp-route-id="@item.Id" style="width: 90px;">Editar</a>
+
+                                                    @if (item.LockoutEnd is null || item.LockoutEnd < DateTime.UtcNow)
+                                                    {
+                                                        <button type="submit" class="btn btn-secondary text-white"
+                                                            asp-controller="User" asp-action="Lock" asp-route-id="@item.Id"
+                                                            style="width: 110px;">Bloquear</button>
+                                                    }
+                                                    else
+                                                    {
+                                                        <button type="submit" class="btn btn-warning" asp-controller="User"
+                                                            asp-action="Unlock" asp-route-id="@item.Id"
+                                                            style="width: 110px;">Desbloquear</button>
+                                                    }
+
+                                                    <a class="btn btn-danger" asp-controller="User" asp-action="Delete"
+                                                        asp-route-id="@item.Id" style="width: 90px;">Eliminar</a>
+                                                </form>
                                             </div>
                                         </td>
                                     </tr>
