--- a/IdentityProject.Web/Views/Shared/_LoginRegister.cshtml
+++ b/IdentityProject.Web/Views/Shared/_LoginRegister.cshtml
@@ -33,7 +33,7 @@
 
 
 
-        @if (User.IsInRole(nameof(RoleType.Admin)))
+        @if (User.IsInRole(RoleTypeString.Administrator))
         {
             <li class="nav-item">
                 <a class="nav-link text-white" asp-area="" asp-controller="Account" asp-action="RegisterAdmin">Registrar Nuevo
